Changing colors for better readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
   /* Light Mode Variables */
   --background-color: #ffffff;
   --text-color: #121212;
-  --link-color: #1a0dab;
+  --link-color: #7c75c7;
   --link-hover-color: #c61aff;
   --navbar-bg: #f8f9fa;
   --navbar-text: #121212;
