--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,7 +213,7 @@ h1, h2, h3, h4, h5, h6 {
 .hero-section {
   position: relative;
   height: 100vh;
-  background-image: url('../assets/images/hero-background.jpg'); /* Replace with your image path */
+  background-image: url('assets/images/hero-background.jpg');
   background-size: cover;
   background-position: center;
   display: flex;
