--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
   /* Light Mode Variables */
   --background-color: #ffffff;
   --text-color: #121212;
-  --link-color: #1a0dab;
+  --link-color: #000000;
   --link-hover-color: #c61aff;
   --navbar-bg: #f8f9fa;
   --navbar-text: #121212;
@@ -13,7 +13,7 @@
   --card-hover-bg: #f1f1f1;
   --card-hover-text: #121212;
   --btn-primary-bg: #1a73e8;
-  --btn-primary-border: #1a73e8;
+  --btn-primary-border: #bb86fc;
   --btn-primary-hover-bg: #1669c1;
   --btn-primary-hover-border: #1669c1;
   --btn-secondary-bg: #6c757d;
@@ -192,6 +192,10 @@ body.dark-mode .navbar {
   color: #e0e0e0;
   padding: 15px 30px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+body.dark-mode .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba%2888, 88, 88, 1%29' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }
 
 .nav-link {
